Added support for Azure AD (still testing).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,14 @@
 
     <!-- Login -->
     <string name="login_title">BPR-IT - Login</string>
+    <string name="login_signIn">Log ind</string>
+    <string name="login_signOut">Log ud</string>
+    <!--
     <string name="login_username">Brugernavn:</string>
     <string name="login_password">Kodeord:</string>
     <string name="login_remember">Husk oplysninger</string>
     <string name="login_login">Login</string>
+    -->
     <string name="login_version">version: </string>
 
     <!-- Menu -->
