--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,14 +54,20 @@
     <!-- Component Type List -->
     <string name="componentTypeList_title">BPR-IT - Komponenttyper</string>
     <string name="componentTypeList_filter">Søg</string>
-    <string name="componentTypeList_name">Navn:</string>
+    <string name="componentTypeList_name">Type:</string>
     <string name="componentTypeList_inStorage">Antal:</string>
 
     <!-- Component List -->
     <string name="componentList_title">BPR-IT - Komponenter</string>
     <string name="componentList_filter">Søg</string>
+    <string name="componentList_serial">Serienummer:</string>
 
     <!-- Component Details -->
     <string name="componentDetails_title">BPR-IT - Komponentdetaljer</string>
+    <string name="componentDetails_delete">Slet</string>
+    <string name="componentDetails_serial">Serienummer:</string>
+    <string name="componentDetails_type">Type:</string>
+    <string name="componentDetails_created">Oprettet d.:</string>
+    <string name="componentDetails_modified">Sidst ændret d.:</string>
 
 </resources>
